# MLP-Digits-Recognition

./: .gitignore  Cargo.toml  README  README.md
src/: activation_function.rs  evaluation_result.rs  main.rs  mnist_parser.rs  neural_network.rs  tests.rs  utility.rs
