[package]
name = "mlp_digits_recognition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#idx_file = "0.33.0"
rand_distr = "0.4.2"
rand = "0.8.4"
mnist = "0.5.0"
#show-image = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"