[package]
name = "mlp_digits_recognition"
version = "0.1.0"
edition = "2021"
authors = ["Red-Rapious"]
readme = "README.md"
repository = "https://github.com/Red-Rapious/MLP-Digits-Recognition"
license-file = "LICENSE"
keywords = ["neural-network", "digits-recognition", "mnist-handwriting-recognition"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.4.2"
rand = "0.8.4"
mnist = "0.5.0"
#show-image = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
progress_bar = "1.0.5"